@@ -13,14 +13,7 @@ double _kappac_from_rhok_Tk_muk(spec_t rhok, double T, double Te, double muk, lo
 
 double _etac_from_rhok_Tk_muk(spec_t rhok, double T, double Te, double muk, long k);
 
-/*
-double _kappac_from_rhok_Tk_Ek(spec_t rhok, double T, double Te, double E, long k);
-
-double _etac_from_rhok_Tk_Ek(spec_t rhok, double T, double Te, double E, long k);
-*/
 void adjust_nuk_using_mobilities_given_muk(spec_t rhok, double T, double Te, chargedspec_t muk, spec_t nuk);
-
-void adjust_muk_using_nuk(spec_t rhok, double T, double Te, chargedspec_t muk, spec_t nuk);
 
 void find_muk_from_nuk(spec_t nuk, spec_t rhok, double T, double Te, chargedspec_t muk);
 
