@@ -56,6 +56,14 @@
         volume = 31,
         pages = "511"
         }
+@article{jnet:1996:ramshaw,
+        author = "Ramshaw, J. D. AND Chang, C. H.",
+        title = "Friction-weighted self-consistent effective binary diffusion approximation",
+        journal = "Journal of Non-Equilibrium Thermodynamics",
+        year = 1996,
+        volume = 21,
+        pages = "223--232"
+        }
 @book{gen:dixon-lewis,
         author = "Dixon-Lewis, G.",
         TITLE = "Computer Modelling of Combustor Reactions",
@@ -94,6 +102,14 @@ Calculations to 30 000 K",
         institution = "Naval Research Laboratory",
         type = "Reference Pulication",
         year = 2013
+        }
+@article{pces:1981:oran,
+        author = "Oran, E. S. AND Boris, J. P.",
+        TITLE = "Detailed Modeling of Combustion Systems",
+        journal = "Progress in Energy and Combustion Sciences",
+        volume = 7,
+        pages = "1--72",
+        year = 1981
         }
 @article{misc:1981:aleksandrov,
         author = "Aleksandrov, N. L. AND Vysikailo, F. I. AND Islamov, R. S. AND Kochetov, I. V. AND Napartovich, A. P. AND Pevgov, V. G.",
